# render3d

./: CMakeLists.txt  README.md  debug.bat
source/ogre-next/Media/Hlms/Pbs/Metal/: VertexShader_vs.metal
source/ogre-next/Media/Hlms/Terra/GLSL/: PixelShader_ps.glsl
source/ogre-next/Media/Hlms/Terra/HLSL/: PixelShader_ps.hlsl
source/ogre-next/Media/Hlms/Terra/Metal/: PixelShader_ps.metal
source/ogre-next/include/OGRE-Next/: OgreAssert.h
source/ogre-next/lib/Debug/: OgreNextAtmosphere_d.lib  OgreNextHlmsPbs_d.lib  OgreNextHlmsUnlit_d.lib  OgreNextMeshLodGenerator_d.lib  OgreNextOverlay_d.lib  OgreNextSceneFormat_d.lib
source/ogre-next/lib/Debug/opt/: Plugin_ParticleFX2_d.lib  Plugin_ParticleFX_d.lib  RenderSystem_Direct3D11_d.lib  RenderSystem_GL3Plus_d.lib  RenderSystem_NULL_d.lib  RenderSystem_Vulkan_d.lib
source/ogre-next/lib/Release/: OgreNextAtmosphere.lib  OgreNextHlmsPbs.lib  OgreNextHlmsUnlit.lib  OgreNextMeshLodGenerator.lib  OgreNextOverlay.lib  OgreNextSceneFormat.lib
source/ogre-next/lib/Release/opt/: Plugin_ParticleFX.lib  Plugin_ParticleFX2.lib  RenderSystem_Direct3D11.lib  RenderSystem_GL3Plus.lib  RenderSystem_NULL.lib  RenderSystem_Vulkan.lib
source/render3d/: render3d.cpp  render3d.h
standalone/: CMakeLists.txt
standalone/source/: main.cpp
